<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ListView
            android:id="@+id/list_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:dividerHeight="0dp"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="14dp"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/all_news"
                    style="@style/TextView"
                    android:text="@string/all_catigories"/>

                <TextView
                    android:id="@+id/Russia"
                    style="@style/TextView"
                    android:text="@string/Russia" />

                <TextView
                    android:id="@+id/world"
                    style="@style/TextView"
                    android:text="@string/world" />

                <TextView
                    android:id="@+id/USSR"
                    style="@style/TextView"
                    android:text="@string/USSR" />

                <TextView
                    android:id="@+id/finance"
                    style="@style/TextView"
                    android:text="@string/finance" />

                <TextView
                    android:id="@+id/business"
                    style="@style/TextView"
                    android:text="@string/business" />

                <TextView
                    android:id="@+id/strong"
                    style="@style/TextView"
                    android:text="@string/strong" />

                <TextView
                    android:id="@+id/science"
                    style="@style/TextView"
                    android:text="@string/science" />

                <TextView
                    android:id="@+id/sport"
                    style="@style/TextView"
                    android:text="@string/sport" />

                <TextView
                    android:id="@+id/culture"
                    style="@style/TextView"
                    android:text="@string/culture" />

                <TextView
                    android:id="@+id/internet"
                    style="@style/TextView"
                    android:text="@string/internet" />

                <TextView
                    android:id="@+id/values"
                    style="@style/TextView"
                    android:text="@string/values" />

                <TextView
                    android:id="@+id/travels"
                    style="@style/TextView"
                    android:text="@string/travels" />

                <TextView
                    android:id="@+id/life"
                    style="@style/TextView"
                    android:text="@string/life" />

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
