<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailed_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2">

    <ImageView
        android:id="@+id/news_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery" />

    <RelativeLayout
        android:layout_alignBottom="@+id/news_picture"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/gradient"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:id="@+id/relativeLayout">


        <TextView
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:paddingBottom="3dp"/>

        <TextView
            android:id="@+id/add_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textColor="@color/white"
            android:gravity="top|start"
            android:layout_below="@+id/add_title"
            android:layout_alignLeft="@+id/add_title"
            android:layout_alignStart="@+id/add_title" />


    </RelativeLayout>

    <TextView
        android:id="@+id/date_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/date"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/blue"
        android:background="@color/beige"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/numbers"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:background="@color/beige"
        android:layout_below="@+id/relativeLayout"
        android:layout_toRightOf="@+id/date_news"
        android:layout_toEndOf="@+id/date_news" />

    <TextView
        android:id="@+id/detailed_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:paddingTop="10dp"
        android:layout_below="@+id/date_news"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link"
        android:paddingLeft="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/textview_detail_news_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="5dp"
        android:layout_marginBottom="5dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />
</RelativeLayout>